--- a/index.html
+++ b/index.html
@@ -216,10 +216,7 @@
 						assetsURI: "assets.epk",
 						localesURI: "lang/",
 						servers: [
-							{ name: "koneMC", addr: "wss://konemc.ga/"},
-							{ name: "ayunboom", addr: "wss://sus.shhnowisnottheti.me/" },
-							{ name: "A*sPixel", addr: "wss://mc.asspixel.net/"},
-							{ name: "ArchMC", addr: "wss://mc.arch.lol"}
+							{ name: "GodCraft", addr: "wss://qny9lk-8081.csb.app/"},
 						]
 					};
 					
